syntax = "proto3";

option go_package = ".;leader";

package leader;

service Leader {
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
}

message UpdateRequest {
    string key = 1;
    string address = 2;
    string follower_id = 3;
    int64 version = 4;
}

message UpdateResponse {
    UpdateResult result = 1;
    int64 version = 2;
    FollowerEndpoint pre_primary = 3;
    FollowerEndpoint pre_backup = 4;
}

message FollowerEndpoint {
    string address = 1;
    string follower_id = 2;
}

enum UpdateResult {
    SUCCESS = 0;
    NEED_SYNC = 1;
    FAILED = 2;
}
